--- a/CircularNavigation/templates/fphase.html
+++ b/CircularNavigation/templates/fphase.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" type="text/css" href="../static/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="../static/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="../static/css/component1.css" />
+    <link rel="stylesheet" type="text/css" href="../static/css/fphase.css" />
     <script src="../static/js/modernizr-2.6.2.min.js"></script>
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap|family=Architects+Daughter&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 {% endblock %}
@@ -25,29 +31,148 @@
         </nav>
     </div>
     <div id="section1" class="section">
-        <div class="text-wr">
-            <h1 class="title">
-                <div class="title-top"></div>
-                <div class="title-tx"></div>
-            </h1>
+        <div class="row">
+            <br>
+            <div class="column red">
+                <h3 style="color: red; text-align: center; font-family: 'Walter Turncoat', cursive;font-size: small;">Negative</h3>
+                <br>
+                <i class="fa fa-twitter" style="color: red;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>6,345</strong>
+                </p>
+            </div>
+            <div class="column yellow">
+                <h3 style="color: yellow; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Neutral</h3>
+                <br>
+                <i class="fa fa-twitter" style="color: yellow;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>4,144</strong></p>
+            </div>
+            <div class="column green">
+                <h3 style="color: green; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Positive</h3>
+                <br>
+                <i class="fa fa-twitter" style="color: green;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family:  'Julius Sans One', sans-serif; font-size: 30px; color: green;">
+                <strong>19,341</strong></p>
+            </div>
         </div>
     </div>
     <div id="section2" class="section">
-        <div class="text-wr">
-            <h1 class="title"></h1>
-            <p></p>
+        <div class="row">
+            <br>
+            <div class="column red">
+                <h3 style="color: red; text-align: center; font-family: 'Walter Turncoat', cursive;font-size: small;">Negative
+                </h3>
+                <br>
+                <i class="fa fa-twitter" style="color: red;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>7,565</strong>
+                </p>
+            </div>
+            <div class="column yellow">
+                <h3 style="color: yellow; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Neutral
+                </h3>
+                <br>
+                <i class="fa fa-twitter" style="color: yellow;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>6,344</strong></p>
+            </div>
+            <div class="column green">
+                <h3 style="color: green; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Positive
+                </h3>
+                <br>
+                <i class="fa fa-twitter" style="color: green;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family:  'Julius Sans One', sans-serif; font-size: 30px; color: green;">
+                    <strong>29,451</strong></p>
+            </div>
         </div>
     </div>
     <div id="section3" class="section">
-        <div class="text-wr">
-            <h1 class="title"></h1>
-            <p></p>
+        <div class="row">
+            <br>
+            <div class="column red">
+                <h3 style="color: red; text-align: center; font-family: 'Walter Turncoat', cursive;font-size: small;">Negative
+                </h3>
+                <br>
+                <i class="fa fa-twitter" style="color: red;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>7,134</strong>
+                </p>
+            </div>
+            <div class="column yellow">
+                <h3 style="color: yellow; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Neutral
+                </h3>
+                <br>
+                <i class="fa fa-twitter" style="color: yellow;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>5,677</strong></p>
+            </div>
+            <div class="column green">
+                <h3 style="color: green; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Positive
+                </h3>
+                <br>
+                <i class="fa fa-twitter" style="color: green;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family:  'Julius Sans One', sans-serif; font-size: 30px; color: green;">
+                    <strong>16,671</strong></p>
+            </div>
         </div>
     </div>
     <div id="section4" class="section">
-        <div class="text-wr">
-            <h1 class="title"></h1>
-            <p></p>
+        <div class="row">
+            <br>
+            <div class="column red">
+                <h3 style="color: red; text-align: center; font-family: 'Walter Turncoat', cursive;font-size: small;">Negative
+                </h3>
+                <br>
+                <i class="fa fa-twitter" style="color: red;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family: 'Julius Sans One', sans-serif; font-size: 30px; color: red;"><strong>5,314</strong>
+                </p>
+            </div>
+            <div class="column yellow">
+                <h3 style="color: yellow; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Neutral
+                </h3>
+                <br>
+                <i class="fa fa-twitter" style="color: yellow;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family: 'Julius Sans One' ; font-size: 30px; color: yellow;"><strong>7,347</strong></p>
+            </div>
+            <div class="column green">
+                <h3 style="color: green; text-align: center;font-family: 'Walter Turncoat', cursive;font-size: small;">Positive
+                </h3>
+                <br>
+                <i class="fa fa-twitter" style="color: green;"></i>
+                <br>
+                <br>
+                <br>
+                <p style="font-family:  'Julius Sans One', sans-serif; font-size: 30px; color: green;">
+                    <strong>20,561</strong></p>
+            </div>
         </div>
     </div>
 
