--- a/CircularNavigation/templates/fphase.html
+++ b/CircularNavigation/templates/fphase.html
@@ -18,6 +18,9 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" language="javascript" src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    
+    <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
 {% endblock %}
@@ -63,6 +66,16 @@
                 <strong>19,341</strong></p>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        {{ls1[0] | safe}}
     </div>
     <div id="section2" class="section">
         <div class="row">
@@ -100,6 +113,16 @@
                     <strong>29,451</strong></p>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        {{ls1[1] | safe}}
     </div>
     <div id="section3" class="section">
         <div class="row">
@@ -137,6 +160,16 @@
                     <strong>16,671</strong></p>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        {{ls1[2] | safe}}
     </div>
     <div id="section4" class="section">
         <div class="row">
@@ -174,6 +207,16 @@
                     <strong>20,561</strong></p>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        {{ls1[3] | safe}}
     </div>
 
     <!-- <script src="dist/slideNav.js" type="text/javascript"></script>
