--- a/CircularNavigation/templates/main.html
+++ b/CircularNavigation/templates/main.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
+    <script type="text/javascript" language="javascript" src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    
+    <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript">
         google.charts.load('current', {
             'packages': ['geochart'],
@@ -336,7 +339,6 @@
     <br>
     <br> -->
     {% endblock %}
-    {{ls[4]}}
 
         <div class="component">
             <!-- Start Nav Structure -->
