Added plots for states with its sentiments

--- a/CircularNavigation/templates/main.html
+++ b/CircularNavigation/templates/main.html
@@ -339,6 +339,7 @@
     <br>
     <br> -->
     {% endblock %}
+    {{ls[1]['andhra pradesh'] | safe}}
 
         <div class="component">
             <!-- Start Nav Structure -->
