--- a/CircularNavigation/templates/fphase.html
+++ b/CircularNavigation/templates/fphase.html
@@ -58,18 +58,31 @@
 .yellow{
     background-color: rgb(0,0,0);  
 }
+
+.state{
+  color: #E23028;
+  font-size: 24px;
+  font-family: "archia";
+background:rgba(226,48,40,.0627451);
+  padding: .25rem;
+  border-radius: 5px;
+ display: inline-flex;
+ margin-right: 500px; 
+}
 </style>
 <body>
 {% endblock %}
 {% block all %}
     <div class="nav">
         <nav>
-            <a href="#section1"><span data-hover="Phase 1">Stage 1</span></a>
-            <a href="#section2"><span data-hover="Phase 2">Stage 2</span></a>
-            <a href="#section3"><span data-hover="Phase 3">Stage 3</span></a>
-            <a href="#section4"><span data-hover="Phase 4">Stage 4</span></a>
+            <a href="#section1"><span data-hover="Phase 1">Phase 1</span></a>
+            <a href="#section2"><span data-hover="Phase 2">Phase 2</span></a>
+            <a href="#section3"><span data-hover="Phase 3">Phase 3</span></a>
+            <a href="#section4"><span data-hover="Phase 4">Phase 4</span></a>
         </nav>
     </div>
+
+
     <div id="section1" class="section">
         <div class="row">
             <br>
@@ -111,12 +124,12 @@
         <br>
         <br>
         <br>
+                <h1 class="state">25 March - 14 April</h1>
+
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
+        
         
         {{ls1[0] | safe}}
     </div>
@@ -163,9 +176,8 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
+        
+        <h1 class="state">15 April - 3 May</h1>
         <br>
         <br>
         <br>
@@ -214,9 +226,8 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
+        <h1 class="state">4 May -17 May</h1>
+
         <br>
         <br>
         <br>
@@ -265,12 +276,10 @@
         <br>
         <br>
         <br>
+        <h1 class="state">18 May - 31 May</h1>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        
         {{ls1[3] | safe}}
     </div>
 
